<resources>
    <string name="app_name">MyNews</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_query_term">Search query term</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="thumbnail">thumbnail</string>
    <string name="World">World</string>
    <string name="categories">Categories</string>
    <string name="Science">Science</string>
    <string name="Sports">Sports</string>
    <string name="Arts">Arts</string>
    <string name="Technology">Technology</string>
    <string name="Books">Books</string>
    <string name="Politics">Politics</string>
    <string name="Health">Health</string>
    <string name="Travel">Travel</string>
    <string name="topStories">TOP STORIES</string>
    <string name="logo">logo</string>
    <string name="end_date">End Date</string>
    <string name="begin_date">Begin Date</string>
    <string name="business">Business</string>
    <string name="pick_a_date"> __ /__ /__ </string>
    <string name="enable_notifications">Enable notifications (once per day)</string>
    <string name="article_found">new article found for you with </string>
    <string name="notification">MyNews notification !</string>
    <string name="Key_TAGExtra">Key_TAG</string>
    <string name="author">Author : </string>
    <string name="yann_l">Yann L.</string>
    <string name="new_york_times">New York Times : </string>
    <string name="_2018">2018</string>
    <string name="year">Year : </string>
    <string name="nyt_url">https://www.nytimes.com/</string>
    <string name="section_selection">Select your favorite section for the 3rd tab</string>
    <string name="menu_picture">menu picture</string>
    <string name="notificationSearchExtra">notificationSearch</string>
    <string name="periodText">Select your period (in days)\n  for the second tab MOST POPULAR</string>
    <string name="_1">1</string>
    <string name="_7">7</string>
    <string name="_30">30</string>
    <string name="period">You selected a period of </string>
    <string name="day">day.</string>
    <string name="days">days.</string>
    <string name="noQueryTerm">You need to enter a query term</string>
    <string name="noField">You need to select at least one field</string>
    <string name="articleUrl">articleUrl</string>
    <string name="notificationCancel">notification cancel</string>
    <string name="notificationStart">notification set !</string>
    <string-array name="category_array">
        <item>World</item>
        <item>Science</item>
        <item>Arts</item>
        <item>Technology</item>
        <item>Books</item>
        <item>Politics</item>
        <item>Health</item>
        <item>Travel</item>
    </string-array>

</resources>
