<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/categories">
        <menu>
            <group
                android:id="@+id/activity_main_drawer_group"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/activity_main_drawer_world"
                    android:title="@string/World"
                    />

                <item
                    android:id="@+id/activity_main_drawer_Science"
                    android:title="@string/Science" />


                <item
                    android:id="@+id/activity_main_drawer_Arts"
                    android:title="@string/Arts" />

                <item
                    android:id="@+id/activity_main_drawer_Technology"
                    android:title="@string/Technology" />

                <item
                    android:id="@+id/activity_main_drawer_Books"
                    android:title="@string/Books" />

                <item
                    android:id="@+id/activity_main_drawer_Politics"
                    android:title="@string/Politics" />

                <item
                    android:id="@+id/activity_main_drawer_Health"
                    android:title="@string/Health" />

                <item
                    android:id="@+id/activity_main_drawer_Travel"
                    android:title="@string/Travel" />

            </group>
        </menu>
    </item>

</menu>